style: fix several alignment issues in home page

--- a/client/src/pages/HomePage/FeaturesSection/FeaturesSection.scss
+++ b/client/src/pages/HomePage/FeaturesSection/FeaturesSection.scss
@@ -14,7 +14,7 @@
 
   .features-container {
     @include row;
-    gap: 8em;
+    width: 100%;
     justify-content: space-between;
 
     .feature {
