--- a/client/src/pages/HomePage/NumbersSection/NumbersSection.scss
+++ b/client/src/pages/HomePage/NumbersSection/NumbersSection.scss
@@ -15,7 +15,7 @@
 
   .columns-container {
     @include row;
-    gap: 8em;
+    width: 100%;
     justify-content: space-between;
 
     .column {
